--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-PORT=5000
-UPSTASH_REDIS_REST_URL=redis://localhost:6379
-AI_API_KEY=
-JOB_API_KEY=
-JOB_API_BASE_URL=
+PORT=5001
+
+GROQ_API_KEY=
+
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
